AIA-31468: MindBridge Databricks Integration Examples: Update Storing Your MindBridge API Token in Databricks (#3)
## Description
1. Update "Storing Your MindBridge API Token in Databricks" (databricks CLI seems to have been updated)
2. Format python code and updates to best practices
3. Slight formatting changes to markdown

## Jira ticket
- [AIA-31468](https://mindbridge-ai.atlassian.net/browse/AIA-31468)

[AIA-31468]: https://mindbridge-ai.atlassian.net/browse/AIA-31468?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

---------

Co-authored-by: kevin-paulson-mindbridge-ai <kevin-paulson-mindbridge-ai>

--- a/1_Mindbridge_Databricks_E2E_Integration_Tutorial.ipynb
+++ b/1_Mindbridge_Databricks_E2E_Integration_Tutorial.ipynb
@@ -14,29 +14,28 @@
    },
    "source": [
     "# Integrating MindBridge with Databricks: A Step-by-Step Guide\n",
-    "\n",
-    "This tutorial will guide you through the process of integrating MindBridge with Databricks. We will walkthrough how to set up an Organization and Engagement using the MindBridge SDK, how to perform a General Ledger Analysis on data from Databricks, then how you can extract key information from your Analysis Results. Here’s what we’ll cover:\n",
+    "This tutorial will guide you through the process of integrating MindBridge with Databricks. We will walkthrough how to set up an Organization and Engagement using the MindBridge SDK, how to perform a General Ledger Analysis on data from Databricks, then how you can extract key information from your Analysis Results. Here's what we'll cover:\n",
     "\n",
     "1. **Installing the MindBridge SDK in Databricks**  \n",
-    "   We’ll start by installing the MindBridge SDK in your Databricks environment, enabling access to MindBridge’s API features within your notebooks.\n",
+    "   We'll start by installing the MindBridge SDK in your Databricks environment, enabling access to MindBridge's API features within your notebooks.\n",
     "\n",
     "2. **Storing your MindBridge API Token in Databricks**  \n",
     "   Learn to securely save your MindBridge API token in a Databricks-backed secret scope. This step ensures that sensitive credentials are safely managed within Databricks.\n",
     "\n",
     "3. **Loading your MindBridge API Token in Databricks**  \n",
-    "   With the token stored, we’ll show you how to load and use it to configure your API connection.\n",
+    "   With the token stored, we'll show you how to load and use it to configure your API connection.\n",
     "\n",
     "4. **Setting Up an Organization and Engagement**  \n",
-    "   Here, you’ll learn how to configure an Organization and Engagement for your Analysis.\n",
+    "   Here, you'll learn how to configure an Organization and Engagement for your Analysis.\n",
     "\n",
     "5. **Uploading Files to the File Manager**  \n",
-    "    How to upload files into the File Manager created for your Engagement\n",
+    "   How to upload files into the File Manager created for your Engagement\n",
     "\n",
     "6. **Creating and Running Analyses**  \n",
-    "   In this section, you’ll learn how to create a new analysis, link the necessary data from the File Manager, and execute the analysis.\n",
+    "   In this section, you'll learn how to create a new analysis, link the necessary data from the File Manager, and execute the analysis.\n",
     "\n",
     "7. **Getting the Analysis Results**  \n",
-    "   Finally, we’ll retrieve and display the results of your analysis, providing insights into your data that you can further leverage within Databricks.[](url)\n"
+    "   Finally, we'll retrieve and display the results of your analysis, providing insights into your data that you can further leverage within Databricks."
    ]
   },
   {
@@ -53,7 +52,6 @@
    },
    "source": [
     "## Installing the MindBridge SDK in Databricks\n",
-    "\n",
     "The following commands can be run to install the [mindbridge-api-python-client](https://pypi.org/project/mindbridge-api-python-client/) to your currently selected cluster. Version 1.5.1 or newer is required for the steps in this tutorial."
    ]
   },
@@ -93,28 +91,23 @@
    },
    "source": [
     "## Storing Your MindBridge API Token in Databricks\n",
-    "\n",
-    "If you do not have an API Token already you can follow the [Create an API Token Guide](https://support.mindbridge.ai/hc/en-us/articles/9349943782039-Create-an-API-token)\n",
-    "Once that is done, we’ll create a [Databricks-backed secret scope](<https://learn.microsoft.com/en-us/azure/databricks/security/secrets/secret-scopes#create-a-databricks-backed-secret-scope) using the Databricks CLI to securely store your token. If you haven’t set up the Databricks CLI yet, you can follow the setup instructions [here](https://docs.databricks.com/en/dev-tools/cli/index.html).\n",
+    "If you do not have an API Token already you can follow [Create an API token](https://support.mindbridge.ai/hc/en-us/articles/9349943782039-Create-an-API-token) on our knowledge base. Once that is done, we'll [Create a Databricks-backed secret scope](https://learn.microsoft.com/en-us/azure/databricks/security/secrets/#create-a-databricks-backed-secret-scope) using the Databricks CLI to securely store your token. If you haven't set up the Databricks CLI yet, you can follow [Install or update the Databricks CLI](https://learn.microsoft.com/en-us/azure/databricks/dev-tools/cli/install).\n",
     "\n",
     "After installing and configuring the CLI, use the following commands to create a new secret scope and add your API Token to the scope:\n",
-    "<br/><br/>\n",
     "\n",
-    "```bash\n",
+    "```sh\n",
     "# Create the secret scope named \"mindbridge-api-tutorials\"\n",
-    "databricks secrets create-scope --scope mindbridge-api-tutorials\n",
+    "databricks secrets create-scope mindbridge-api-tutorials\n",
     "\n",
     "# Add your MindBridge API Token to the scope\n",
-    "databricks secrets put --scope mindbridge-api-tutorials --key MINDBRIDGE_API_TOKEN --string-value YOUR-API-TOKEN\n",
+    "databricks secrets put-secret mindbridge-api-tutorials MINDBRIDGE_API_TOKEN\n",
     "```\n",
-    "<br/>\n",
-    "Once your token is added, you can verify its existence by running the following:\n",
-    "<br/><br/>\n",
     "\n",
-    "```bash\n",
+    "Once your token is added, you can verify its existence by running the following:\n",
+    "```sh\n",
     "databricks secrets list-scopes\n",
-    "databricks secrets list --scope mindbridge-api-tutorials\n",
-    "```\n"
+    "databricks secrets list-secrets mindbridge-api-tutorials\n",
+    "```"
    ]
   },
   {
@@ -132,7 +125,7 @@
    "source": [
     "## Loading your MindBridge API Token in Databricks\n",
     "\n",
-    "In this section, we’ll load the MindBridge API token securely stored in Databricks and configure the API connection. Replace the ```url``` with the url for your MindBridge instance. Upon execution, you should see details about the user associated with your token."
+    "In this section, we'll load the MindBridge API token securely stored in Databricks and configure the API connection. Replace the ```url``` with the url for your MindBridge instance. Upon execution, you should see details about the user associated with your token."
    ]
   },
   {
@@ -153,13 +146,15 @@
    },
    "outputs": [],
    "source": [
+    "import mindbridgeapi as mbapi\n",
+    "\n",
     "# Load your token from the secret scope\n",
-    "token = dbutils.secrets.get(scope=\"mindbridge-api-tutorials\", key=\"MINDBRIDGE_API_TOKEN\")\n",
+    "token = dbutils.secrets.get(\n",
+    "    scope=\"mindbridge-api-tutorials\", key=\"MINDBRIDGE_API_TOKEN\"\n",
+    ")\n",
     "\n",
     "# Create a connection to the server\n",
-    "import mindbridgeapi as mbapi\n",
-    "url = \"yoursubdomain.mindbridge.ai\"\n",
-    "server = mbapi.Server(url=url, token=token)\n",
+    "server = mbapi.Server(url=\"yoursubdomain.mindbridge.ai\", token=token)\n",
     "\n",
     "# Get the current user\n",
     "user = server.users.get_current()\n",
@@ -180,8 +175,7 @@
    },
    "source": [
     "## Setting up an Organization and Engagement\n",
-    "\n",
-    "In this section, we’ll walk through setting up an Organization and an Engagement to house your Analysis. We’ll set up the Engagement using the MindBridge for-profit library. If you already have an existing Organization and Engagement you would like to use, you can update the ```organization_name``` and ```engagement_name``` values to use your preferred entities. If your Engagement uses a different Library, you may need to update later steps so that your Analysis Type and Analysis Source Types are compatible with the Library you selected."
+    "In this section, we'll walk through setting up an Organization and an Engagement to house your Analysis. We'll set up the Engagement using the MindBridge for-profit library. If you already have an existing Organization and Engagement you would like to use, you can update the `organization_name` and `engagement_name` values to use your preferred entities. If your Engagement uses a different Library, you may need to update later steps so that your Analysis Type and Analysis Source Types are compatible with the Library you selected."
    ]
   },
   {
@@ -212,7 +206,7 @@
     "    organization_item = mbapi.OrganizationItem(\n",
     "        name=organization_name,\n",
     "        external_client_code=\"My Client ID\",  # Optional\n",
-    "        manager_user_ids=[user.id]            # Optional\n",
+    "        manager_user_ids=[user.id],  # Optional\n",
     "    )\n",
     "    organization = server.organizations.create(organization_item)\n",
     "    print(f\"Created the Organization: '{organization_name}'\")\n",
@@ -222,7 +216,9 @@
     "\n",
     "# Step 2: Get the Library we want to use in the Engagement\n",
     "system_libraries = server.libraries.get({\"system\": True})\n",
-    "mindbridge_for_profit_library = next((x for x in system_libraries if x.name == library_name), None)\n",
+    "mindbridge_for_profit_library = next(\n",
+    "    (x for x in system_libraries if x.name == library_name), None\n",
+    ")\n",
     "\n",
     "# Step 3: Create the Engagement, or get it if it already exists\n",
     "try:\n",
@@ -230,13 +226,20 @@
     "        organization_id=organization.id,\n",
     "        name=engagement_name,\n",
     "        engagement_lead_id=user.id,\n",
-    "        library_id=mindbridge_for_profit_library.id\n",
+    "        library_id=mindbridge_for_profit_library.id,\n",
     "    )\n",
     "    engagement = server.engagements.create(engagement_item)\n",
     "    print(f\"Created the Engagement: '{engagement_name}'\")\n",
     "except mbapi.exceptions.ValidationError:\n",
-    "    engagement = next(server.engagements.get({\"organizationId\": organization.id, \"name\": engagement_name}))\n",
-    "    print(f\"Engagement '{engagement_name}' already exists within the Organization. Fetched it instead.\")"
+    "    engagement = next(\n",
+    "        server.engagements.get(\n",
+    "            {\"organizationId\": organization.id, \"name\": engagement_name}\n",
+    "        )\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"Engagement '{engagement_name}' already exists within the Organization. \"\n",
+    "        \"Fetched it instead.\"\n",
+    "    )"
    ]
   },
   {
@@ -253,7 +256,6 @@
    },
    "source": [
     "## Uploading Files to the File Manager\n",
-    "\n",
     "After an Engagement is created, a File Manager entity is automatically set up to store data used by Analyses within the Engagement. We will upload our example General Ledger file from the data folder to the File Manager."
    ]
   },
@@ -275,24 +277,23 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
+    "from pathlib import Path\n",
     "\n",
-    "relative_path = './data/GENERAL_LEDGER_JOURNAL.csv'\n",
-    "full_path = os.path.abspath(relative_path)\n",
+    "relative_path = \"./data/GENERAL_LEDGER_JOURNAL.csv\"\n",
+    "full_path = Path(relative_path).resolve()\n",
     "\n",
     "gl_file_manager_item = mbapi.FileManagerItem(engagement_id=engagement.id)\n",
     "\n",
     "# Upload General Ledger\n",
     "gl_file_manager_file = server.file_manager.upload(\n",
-    "    input_item=gl_file_manager_item,\n",
-    "    input_file=full_path\n",
+    "    input_item=gl_file_manager_item, input_file=full_path\n",
     ")\n",
     "\n",
     "# We can check to see if our files are in the File Manager\n",
     "file_manager_generator = server.file_manager.get({\"engagementId\": engagement.id})\n",
     "print(\"Here are the files in the File Manager for your Engagement\")\n",
     "for file_manager_entity in file_manager_generator:\n",
-    "  print(file_manager_entity.original_name)"
+    "    print(file_manager_entity.original_name)"
    ]
   },
   {
@@ -309,8 +310,7 @@
    },
    "source": [
     "## Creating and Running Analyses\n",
-    "\n",
-    "With our Engagement set up and files uploaded, we’re ready to create an Analysis. We’ll import the General Ledger File Manager as an Analysis Source, mark the Account Mappings as verified then run the Analysis.\n",
+    "With our Engagement set up and files uploaded, we're ready to create an Analysis. We'll import the General Ledger File Manager as an Analysis Source, mark the Account Mappings as verified then run the Analysis.\n",
     "\n",
     "If you used a custom library instead of the MindBridge for-profit library used in *Setting up an Organization and Engagement*, you will need to upload a Chart of Accounts or use the Account Mappings endpoints to map the accounts within the General Ledger. In this example we will use the Verify Mappings endpoint to use the suggested Account Mappings created by MindBridge."
    ]
@@ -341,7 +341,7 @@
     "    analysis_periods=[{\"startDate\": \"2020-01-01\", \"endDate\": \"2021-01-01\"}],\n",
     "    analysis_type_id=mbapi.AnalysisTypeItem.GENERAL_LEDGER,\n",
     "    currency_code=\"CAD\",\n",
-    "    name=\"General Ledger Analysis\"\n",
+    "    name=\"General Ledger Analysis\",\n",
     ")\n",
     "\n",
     "analysis = server.analyses.create(analysis_item)\n",
@@ -370,7 +370,10 @@
     "    if gl_analysis_source.workflow_state.value != prev_state:\n",
     "        print(f\"Current State: {gl_analysis_source.workflow_state.value}\")\n",
     "        prev_state = gl_analysis_source.workflow_state.value\n",
-    "    if gl_analysis_source.workflow_state.value == gl_analysis_source_item.target_workflow_state.value:\n",
+    "    if (\n",
+    "        gl_analysis_source.workflow_state.value\n",
+    "        == gl_analysis_source_item.target_workflow_state.value\n",
+    "    ):\n",
     "        print(\"Analysis Source is ready.\")\n",
     "        break\n",
     "\n",
@@ -401,7 +404,6 @@
    "source": [
     "## Getting the Analysis Results\n",
     "\n",
-    "\n",
     "### Overview of Data Table information\n",
     "First we will take a look at what Data Tables exist on this Analysis and how the data is structured. Below is some code to generate an overview of each Data Table in the Analysis, including the fields, data type and whether the field is searchable."
    ]
@@ -424,7 +426,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "\n",
     "server.analyses.restart_data_tables(analysis)\n",
@@ -432,28 +433,30 @@
     "# Loop through each data_table and display information\n",
     "for data_table in analysis.data_tables:\n",
     "    # Display general data_table information\n",
-    "    general_info = pd.DataFrame({\n",
-    "        \"Analysis ID\": [data_table.analysis_id],\n",
-    "        \"Data Table ID\": [data_table.id],\n",
-    "        \"Logical Name\": [data_table.logical_name],\n",
-    "        \"Type\": [data_table.type]\n",
-    "    })\n",
+    "    general_info = pd.DataFrame(\n",
+    "        {\n",
+    "            \"Analysis ID\": [data_table.analysis_id],\n",
+    "            \"Data Table ID\": [data_table.id],\n",
+    "            \"Logical Name\": [data_table.logical_name],\n",
+    "            \"Type\": [data_table.type],\n",
+    "        }\n",
+    "    )\n",
     "    display(general_info)\n",
-    "    \n",
+    "\n",
     "    # Prepare column data for this data_table\n",
     "    column_data = [\n",
     "        {\n",
     "            \"Field\": col.field,\n",
     "            \"Filter Only\": col.filter_only,\n",
     "            \"Keyword Search\": col.keyword_search,\n",
-    "            \"Type\": col.type.value\n",
+    "            \"Type\": col.type.value,\n",
     "        }\n",
     "        for col in data_table.columns\n",
     "    ]\n",
-    "    \n",
+    "\n",
     "    # Create DataFrame for column data and display it\n",
     "    column_df = pd.DataFrame(column_data)\n",
-    "    display(column_df)\n"
+    "    display(column_df)"
    ]
   },
   {
@@ -470,7 +473,6 @@
    },
    "source": [
     "### Extracting Key Info from MindBridge \n",
-    "\n",
     "Now let's extract specific data from our Data Tables. In this example we will fetch all of the transactions which had a Risk Score greater or equal to 30%. Then we will save the results in a CSV and load them into a pandas DataFrame."
    ]
   },
@@ -492,11 +494,12 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
     "# Define the output file path where the results will be saved\n",
     "\n",
-    "output_relative_path = './results/result.csv'\n",
-    "output_full_path = os.path.abspath(output_relative_path)\n",
+    "output_relative_path = \"./results/result.csv\"\n",
+    "output_full_path = Path(output_relative_path).resolve()\n",
     "\n",
     "print(\"Requesting Elevated Risk General Ledger Transactions\")\n",
     "# Restart data tables to reset generator\n",
@@ -514,10 +517,9 @@
     "\n",
     "# Define the output path for saving the CSV file\n",
     "path_output = server.data_tables.download(\n",
-    "    export_async_result,\n",
-    "    output_file_path=output_full_path,\n",
+    "    export_async_result, output_file_path=output_full_path\n",
     ")\n",
-    "print(f\"Success! Saved to: {path_output}\")\n"
+    "print(f\"Success! Saved to: {path_output}\")"
    ]
   },
   {
