Get login to work

--- a/7_Task_Assignment_Prototype.ipynb
+++ b/7_Task_Assignment_Prototype.ipynb
@@ -73,8 +73,29 @@
    },
    "outputs": [],
    "source": [
-    "%pip install --upgrade mindbridge-api-python-client\n",
+    "%pip install --upgrade mindbridge-api-python-client pydantic<2.12\n",
     "dbutils.library.restartPython()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "407a087f-571e-4acf-94f8-1e38711de33f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "mindbridge_url = \"psus.mindbridge.ai\""
    ]
   },
   {
@@ -154,11 +175,12 @@
     ")\n",
     "\n",
     "# Create a connection to the server\n",
-    "server = mbapi.Server(url=\"yoursubdomain.mindbridge.ai\", token=token)\n",
+    "server = mbapi.Server(url=mindbridge_url, token=token)\n",
     "\n",
     "# Get the current user\n",
     "user = server.users.get_current()\n",
-    "print(user)"
+    "print(f\"Name: {user.first_name} {user.last_name}\")\n",
+    "print(f\"ID:   {user.id}\")"
    ]
   },
   {
@@ -550,9 +572,18 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
-   "environmentMetadata": null,
+   "environmentMetadata": {
+    "base_environment": "",
+    "environment_version": "4"
+   },
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
