Get relevant information from the full URL

--- a/7_Task_Assignment_Prototype.ipynb
+++ b/7_Task_Assignment_Prototype.ipynb
@@ -95,7 +95,7 @@
    },
    "outputs": [],
    "source": [
-    "mindbridge_url = \"psus.mindbridge.ai\""
+    "analysis_url = \"https://psus.mindbridge.ai/app/organization/68efe134a3c10e74eb3d6b81/engagement/68eff222067ffa4a9dc98640/analysis/68eff47f067ffa4a9dc98749/analyze/summary?productCode=VENDOR\""
    ]
   },
   {
@@ -129,6 +129,33 @@
     "databricks secrets list-scopes\n",
     "databricks secrets list-secrets mindbridge-api-tutorials\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "401879bc-632c-4bf6-a47c-e156a4e540d1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from urllib3.util import parse_url\n",
+    "\n",
+    "parsed_url = parse_url(analysis_url)\n",
+    "mindbridge_url = parsed_url.host\n",
+    "\n",
+    "parsed_url_path = parsed_url.path.split(\"/\")\n",
+    "analysis_result_id = parsed_url_path[parsed_url_path.index('analysis') + 1]\n"
    ]
   },
   {
@@ -178,9 +205,9 @@
     "server = mbapi.Server(url=mindbridge_url, token=token)\n",
     "\n",
     "# Get the current user\n",
-    "user = server.users.get_current()\n",
-    "print(f\"Name: {user.first_name} {user.last_name}\")\n",
-    "print(f\"ID:   {user.id}\")"
+    "analysis_result = server.analysis_results.get_by_id(analysis_result_id)\n",
+    "analysis = server.analyses.get_by_id(analysis_result.analysis_id)\n",
+    "print(analysis.id)"
    ]
   },
   {
