Look through data table.

--- a/7_Task_Assignment_Prototype.ipynb
+++ b/7_Task_Assignment_Prototype.ipynb
@@ -235,7 +235,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ae23e9a0-ec79-4e8f-b412-ff84a1761d65",
      "showTitle": false,
@@ -244,7 +247,27 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from pathlib import Path\n",
+    "from tempfile import NamedTemporaryFile\n",
+    "import csv\n",
+    "\n",
+    "with NamedTemporaryFile(delete=False) as temp_file:\n",
+    "    temp_file_path = Path(temp_file.name)\n",
+    "\n",
+    "print(f\"Exporting to: {temp_file_path}\")\n",
+    "async_result = server.data_tables.export(data_table, fields=[\"rowid\"])\n",
+    "server.data_tables.wait_for_export(async_result)\n",
+    "temp_file_path = server.data_tables.download(async_result, output_file_path=temp_file_path)\n",
+    "\n",
+    "with temp_file_path.open(newline=\"\", encoding=\"utf_8\") as infile:\n",
+    "    reader = csv.DictReader(infile)\n",
+    "    print(\"CreatingTasks for:\")\n",
+    "    for row in reader:\n",
+    "        print(row[\"rowid\"])\n",
+    "\n",
+    "temp_file_path.unlink()"
+   ]
   }
  ],
  "metadata": {
