Add a data table query

--- a/7_Task_Assignment_Prototype.ipynb
+++ b/7_Task_Assignment_Prototype.ipynb
@@ -101,7 +101,12 @@
    },
    "outputs": [],
    "source": [
+    "from datetime import date\n",
     "analysis_url = \"https://psus.mindbridge.ai/app/organization/68efe134a3c10e74eb3d6b81/engagement/68eff222067ffa4a9dc98640/analysis/68eff47f067ffa4a9dc98749/analyze/summary?productCode=VENDOR\"\n",
+    "data_table_query = {\"date\": {\n",
+    "    \"$gte\": date(2025,1,1),\n",
+    "    \"$lt\": date(2025,2,1)\n",
+    "  }, \"risk\": {\"$gte\": 5_000}}\n",
     "data_table_logical_name = \"output_entries_virtual\""
    ]
   },
@@ -256,7 +261,7 @@
     "    temp_file_path = Path(temp_file.name)\n",
     "\n",
     "print(f\"Exporting to: {temp_file_path}\")\n",
-    "async_result = server.data_tables.export(data_table, fields=[\"rowid\"])\n",
+    "async_result = server.data_tables.export(data_table, fields=[\"rowid\"], query=data_table_query)\n",
     "server.data_tables.wait_for_export(async_result)\n",
     "temp_file_path = server.data_tables.download(async_result, output_file_path=temp_file_path)\n",
     "\n",
