--- a/7_Task_Assignment_Prototype.ipynb
+++ b/7_Task_Assignment_Prototype.ipynb
@@ -102,11 +102,13 @@
    "outputs": [],
    "source": [
     "from datetime import date\n",
-    "analysis_url = \"https://psus.mindbridge.ai/app/organization/68efe134a3c10e74eb3d6b81/engagement/68eff222067ffa4a9dc98640/analysis/68eff47f067ffa4a9dc98749/analyze/summary?productCode=VENDOR\"\n",
+    "analysis_url = \"https://psus.mindbridge.ai/app/organization/68efe134a3c10e74eb3d6b81/engagement/68f7c7f58512e41f49089091/analysis/68f7c89419d3fa1d6ec2d28a/analyze/summary?productCode=VENDOR\"\n",
     "data_table_query = {\"date\": {\n",
     "    \"$gte\": date(2025,1,1),\n",
     "    \"$lt\": date(2025,2,1)\n",
     "  }, \"risk\": {\"$gte\": 5_000}}\n",
+    "\n",
+    "assigned_user_email = \"kevin.paulson@mindbridge.ai\"\n",
     "data_table_logical_name = \"output_entries_virtual\""
    ]
   },
@@ -232,7 +234,14 @@
     "\n",
     "server.analyses.restart_data_tables(analysis)\n",
     "data_table = next(x for x in analysis.data_tables if x.logical_name == data_table_logical_name)\n",
-    "print(\"Using logical_name: {data_table.logical_name} (type: {data_table.type}, id: {data_table.id})\")"
+    "print(f\"Using logical_name: {data_table.logical_name} (type: {data_table.type}, id: {data_table.id})\")\n",
+    "\n",
+    "user, *others = server.users.get(json={\"email\": assigned_user_email})\n",
+    "if not user:\n",
+    "    raise ValueError(f\"User with email {assigned_user_email} not found\")\n",
+    "\n",
+    "if others:\n",
+    "    raise Exception(f\"Unexpected error: multiple users found with email {assigned_user_email}\")"
    ]
   },
   {
@@ -269,7 +278,16 @@
     "    reader = csv.DictReader(infile)\n",
     "    print(\"CreatingTasks for:\")\n",
     "    for row in reader:\n",
-    "        print(row[\"rowid\"])\n",
+    "        task = mbapi.TaskItem(\n",
+    "            row_id=row[\"rowid\"],\n",
+    "            type=mbapi.TaskType.TRA_ENTRY,\n",
+    "            status=mbapi.TaskStatus.OPEN,\n",
+    "            engagement_id=analysis.engagement_id,\n",
+    "            analysis_result_id=analysis_result.id,\n",
+    "            audit_areas=[\"Audit Area 1\"],\n",
+    "            assigned_id=user.id\n",
+    "        )\n",
+    "        task = server.tasks.create(task)\n",
     "\n",
     "temp_file_path.unlink()"
    ]
