--- a/7_Task_Assignment_Prototype.ipynb
+++ b/7_Task_Assignment_Prototype.ipynb
@@ -102,14 +102,14 @@
    "outputs": [],
    "source": [
     "from datetime import date\n",
-    "analysis_url = \"https://psus.mindbridge.ai/app/organization/68efe134a3c10e74eb3d6b81/engagement/68f7c7f58512e41f49089091/analysis/68f7c89419d3fa1d6ec2d28a/analyze/summary?productCode=VENDOR\"\n",
-    "data_table_query = {\"date\": {\n",
-    "    \"$gte\": date(2025,1,1),\n",
-    "    \"$lt\": date(2025,2,1)\n",
-    "  }, \"risk\": {\"$gte\": 5_000}}\n",
+    "analysis_url = \"https://psus.mindbridge.ai/app/organization/68f7dc86efccc75265245b0e/engagement/68f7dc87efccc75265245b10/analysis/68f7dc9eefccc75265245bf4/analyze/financial-statements?productCode=GENERAL_LEDGER#facetBarState=JTdCJTIydmlzaWJsZV9mYWNldF9pZHMlMjIlM0ElNUIlNUQlMkMlMjJmYWNldF9zdGF0ZXMlMjIlM0ElNUIlNUQlN0Q=\"\n",
+    "data_table_query = {\"effective_date\": {\n",
+    "    \"$gte\": date(2022,5,1),\n",
+    "    \"$lt\": date(2022,6,1)\n",
+    "  }, \"risk\": {\"$gte\": 3_000}}\n",
     "\n",
     "assigned_user_email = \"kevin.paulson@mindbridge.ai\"\n",
-    "data_table_logical_name = \"output_entries_virtual\""
+    "data_table_logical_name = \"gl_journal_lines\""
    ]
   },
   {
@@ -270,17 +270,21 @@
     "    temp_file_path = Path(temp_file.name)\n",
     "\n",
     "print(f\"Exporting to: {temp_file_path}\")\n",
-    "async_result = server.data_tables.export(data_table, fields=[\"rowid\"], query=data_table_query)\n",
+    "async_result = server.data_tables.export(data_table, fields=[\"rowid\", \"txid\", \"risk\", \"effective_date\"], query=data_table_query)\n",
     "server.data_tables.wait_for_export(async_result)\n",
     "temp_file_path = server.data_tables.download(async_result, output_file_path=temp_file_path)\n",
     "\n",
     "with temp_file_path.open(newline=\"\", encoding=\"utf_8\") as infile:\n",
     "    reader = csv.DictReader(infile)\n",
-    "    print(\"CreatingTasks for:\")\n",
+    "    print(\"Creating Tasks for:\")\n",
     "    for row in reader:\n",
+    "        row_id = row[\"rowid\"]\n",
+    "        transaction_id=row[\"txid\"]\n",
+    "        print(f\"- row_id: {row_id}, transaction_id: {transaction_id}, risk: {row[\"risk\"]}, effective_date: {row[\"effective_date\"]}\")\n",
     "        task = mbapi.TaskItem(\n",
-    "            row_id=row[\"rowid\"],\n",
-    "            type=mbapi.TaskType.TRA_ENTRY,\n",
+    "            row_id=row_id,\n",
+    "            transaction_id=transaction_id,\n",
+    "            type=mbapi.TaskType.ENTRY,\n",
     "            status=mbapi.TaskStatus.OPEN,\n",
     "            engagement_id=analysis.engagement_id,\n",
     "            analysis_result_id=analysis_result.id,\n",
@@ -289,6 +293,7 @@
     "        )\n",
     "        task = server.tasks.create(task)\n",
     "\n",
+    "print(\"Done.\")\n",
     "temp_file_path.unlink()"
    ]
   }
