--- a/7_Task_Assignment_Prototype.ipynb
+++ b/7_Task_Assignment_Prototype.ipynb
@@ -102,11 +102,12 @@
    "outputs": [],
    "source": [
     "from datetime import date\n",
+    "\n",
     "analysis_url = \"https://psus.mindbridge.ai/app/organization/68f7dc86efccc75265245b0e/engagement/68f7dc87efccc75265245b10/analysis/68f7dc9eefccc75265245bf4/analyze/financial-statements?productCode=GENERAL_LEDGER#facetBarState=JTdCJTIydmlzaWJsZV9mYWNldF9pZHMlMjIlM0ElNUIlNUQlMkMlMjJmYWNldF9zdGF0ZXMlMjIlM0ElNUIlNUQlN0Q=\"\n",
-    "data_table_query = {\"effective_date\": {\n",
-    "    \"$gte\": date(2022,5,1),\n",
-    "    \"$lt\": date(2022,6,1)\n",
-    "  }, \"risk\": {\"$gte\": 3_000}}\n",
+    "data_table_query = {\n",
+    "    \"effective_date\": {\"$gte\": date(2022, 5, 1), \"$lt\": date(2022, 6, 1)},\n",
+    "    \"risk\": {\"$gte\": 3_000},\n",
+    "}\n",
     "\n",
     "assigned_user_email = \"kevin.paulson@mindbridge.ai\"\n",
     "data_table_logical_name = \"gl_journal_lines\""
@@ -172,7 +173,7 @@
     "mindbridge_url = parsed_url.host\n",
     "\n",
     "parsed_url_path = parsed_url.path.split(\"/\")\n",
-    "analysis_result_id = parsed_url_path[parsed_url_path.index('analysis') + 1]\n"
+    "analysis_result_id = parsed_url_path[parsed_url_path.index(\"analysis\") + 1]"
    ]
   },
   {
@@ -233,15 +234,21 @@
     "    print(f\"- logical_name: {x.logical_name} (type: {x.type}, id: {x.id})\")\n",
     "\n",
     "server.analyses.restart_data_tables(analysis)\n",
-    "data_table = next(x for x in analysis.data_tables if x.logical_name == data_table_logical_name)\n",
-    "print(f\"Using logical_name: {data_table.logical_name} (type: {data_table.type}, id: {data_table.id})\")\n",
+    "data_table = next(\n",
+    "    x for x in analysis.data_tables if x.logical_name == data_table_logical_name\n",
+    ")\n",
+    "print(\n",
+    "    f\"Using logical_name: {data_table.logical_name} (type: {data_table.type}, id: {data_table.id})\"\n",
+    ")\n",
     "\n",
     "user, *others = server.users.get(json={\"email\": assigned_user_email})\n",
     "if not user:\n",
     "    raise ValueError(f\"User with email {assigned_user_email} not found\")\n",
     "\n",
     "if others:\n",
-    "    raise Exception(f\"Unexpected error: multiple users found with email {assigned_user_email}\")"
+    "    raise Exception(\n",
+    "        f\"Unexpected error: multiple users found with email {assigned_user_email}\"\n",
+    "    )"
    ]
   },
   {
@@ -270,17 +277,25 @@
     "    temp_file_path = Path(temp_file.name)\n",
     "\n",
     "print(f\"Exporting to: {temp_file_path}\")\n",
-    "async_result = server.data_tables.export(data_table, fields=[\"rowid\", \"txid\", \"risk\", \"effective_date\"], query=data_table_query)\n",
+    "async_result = server.data_tables.export(\n",
+    "    data_table,\n",
+    "    fields=[\"rowid\", \"txid\", \"risk\", \"effective_date\"],\n",
+    "    query=data_table_query,\n",
+    ")\n",
     "server.data_tables.wait_for_export(async_result)\n",
-    "temp_file_path = server.data_tables.download(async_result, output_file_path=temp_file_path)\n",
+    "temp_file_path = server.data_tables.download(\n",
+    "    async_result, output_file_path=temp_file_path\n",
+    ")\n",
     "\n",
     "with temp_file_path.open(newline=\"\", encoding=\"utf_8\") as infile:\n",
     "    reader = csv.DictReader(infile)\n",
     "    print(\"Creating Tasks for:\")\n",
     "    for row in reader:\n",
     "        row_id = row[\"rowid\"]\n",
-    "        transaction_id=row[\"txid\"]\n",
-    "        print(f\"- row_id: {row_id}, transaction_id: {transaction_id}, risk: {row[\"risk\"]}, effective_date: {row[\"effective_date\"]}\")\n",
+    "        transaction_id = row[\"txid\"]\n",
+    "        print(\n",
+    "            f\"- row_id: {row_id}, transaction_id: {transaction_id}, risk: {row['risk']}, effective_date: {row['effective_date']}\"\n",
+    "        )\n",
     "        task = mbapi.TaskItem(\n",
     "            row_id=row_id,\n",
     "            transaction_id=transaction_id,\n",
@@ -289,7 +304,7 @@
     "            engagement_id=analysis.engagement_id,\n",
     "            analysis_result_id=analysis_result.id,\n",
     "            audit_areas=[\"Audit Area 1\"],\n",
-    "            assigned_id=user.id\n",
+    "            assigned_id=user.id,\n",
     "        )\n",
     "        task = server.tasks.create(task)\n",
     "\n",
