Check if task already exists, some formatting

--- a/7_Task_Assignment_Prototype.ipynb
+++ b/7_Task_Assignment_Prototype.ipynb
@@ -1,67 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "55d5ae82-8e05-4034-bbab-03d5fcc921d3",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "# Integrating MindBridge with Databricks: A Step-by-Step Guide\n",
-    "This tutorial will guide you through the process of integrating MindBridge with Databricks. We will walkthrough how to set up an Organization and Engagement using the MindBridge SDK, how to perform a General Ledger Analysis on data from Databricks, then how you can extract key information from your Analysis Results. Here's what we'll cover:\n",
-    "\n",
-    "1. **Installing the MindBridge SDK in Databricks**  \n",
-    "   We'll start by installing the MindBridge SDK in your Databricks environment, enabling access to MindBridge's API features within your notebooks.\n",
-    "\n",
-    "2. **Storing your MindBridge API Token in Databricks**  \n",
-    "   Learn to securely save your MindBridge API token in a Databricks-backed secret scope. This step ensures that sensitive credentials are safely managed within Databricks.\n",
-    "\n",
-    "3. **Loading your MindBridge API Token in Databricks**  \n",
-    "   With the token stored, we'll show you how to load and use it to configure your API connection.\n",
-    "\n",
-    "4. **Setting Up an Organization and Engagement**  \n",
-    "   Here, you'll learn how to configure an Organization and Engagement for your Analysis.\n",
-    "\n",
-    "5. **Uploading Files to the File Manager**  \n",
-    "   How to upload files into the File Manager created for your Engagement\n",
-    "\n",
-    "6. **Creating and Running Analyses**  \n",
-    "   In this section, you'll learn how to create a new analysis, link the necessary data from the File Manager, and execute the analysis.\n",
-    "\n",
-    "7. **Getting the Analysis Results**  \n",
-    "   Finally, we'll retrieve and display the results of your analysis, providing insights into your data that you can further leverage within Databricks."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "a221f5c1-5e69-4dfd-a142-38b09d420edf",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## Installing the MindBridge SDK in Databricks\n",
-    "The following commands can be run to install the [mindbridge-api-python-client](https://pypi.org/project/mindbridge-api-python-client/) to your currently selected cluster. Version 1.5.1 or newer is required for the steps in this tutorial."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -80,37 +19,8 @@
    "outputs": [],
    "source": [
     "%pip install --upgrade mindbridge-api-python-client pydantic<2.12\n",
-    "dbutils.library.restartPython()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "407a087f-571e-4acf-94f8-1e38711de33f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from datetime import date\n",
-    "\n",
-    "analysis_url = \"https://psus.mindbridge.ai/app/organization/68f7dc86efccc75265245b0e/engagement/68f7dc87efccc75265245b10/analysis/68f7dc9eefccc75265245bf4/analyze/financial-statements?productCode=GENERAL_LEDGER#facetBarState=JTdCJTIydmlzaWJsZV9mYWNldF9pZHMlMjIlM0ElNUIlNUQlMkMlMjJmYWNldF9zdGF0ZXMlMjIlM0ElNUIlNUQlN0Q=\"\n",
-    "data_table_query = {\n",
-    "    \"effective_date\": {\"$gte\": date(2022, 5, 1), \"$lt\": date(2022, 6, 1)},\n",
-    "    \"risk\": {\"$gte\": 3_000},\n",
-    "}\n",
-    "\n",
-    "assigned_user_email = \"kevin.paulson@mindbridge.ai\"\n",
-    "data_table_logical_name = \"gl_journal_lines\""
+    "dbutils.library.restartPython()\n",
+    "# The above installs the relevant pre-requisites and must be first"
    ]
   },
   {
@@ -159,6 +69,36 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "407a087f-571e-4acf-94f8-1e38711de33f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from datetime import date\n",
+    "\n",
+    "analysis_url = \"https://psus.mindbridge.ai/app/organization/68f7dc86efccc75265245b0e/engagement/68f7dc87efccc75265245b10/analysis/68f7dc9eefccc75265245bf4/analyze/financial-statements?productCode=GENERAL_LEDGER#facetBarState=JTdCJTIydmlzaWJsZV9mYWNldF9pZHMlMjIlM0ElNUIlNUQlMkMlMjJmYWNldF9zdGF0ZXMlMjIlM0ElNUIlNUQlN0Q=\"\n",
+    "data_table_query = {\n",
+    "    \"effective_date\": {\"$gte\": date(2022, 5, 1), \"$lt\": date(2022, 6, 1)},\n",
+    "    \"risk\": {\"$gte\": 3_000},\n",
+    "}\n",
+    "assigned_user_email = \"kevin.paulson@mindbridge.ai\"\n",
+    "\n",
+    "data_table_logical_name = \"gl_journal_lines\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "401879bc-632c-4bf6-a47c-e156a4e540d1",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -174,27 +114,6 @@
     "\n",
     "parsed_url_path = parsed_url.path.split(\"/\")\n",
     "analysis_result_id = parsed_url_path[parsed_url_path.index(\"analysis\") + 1]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "109a403a-ae91-4d2d-a0f7-89f9434dfacc",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## Loading your MindBridge API Token in Databricks\n",
-    "\n",
-    "In this section, we'll load the MindBridge API token securely stored in Databricks and configure the API connection. Replace the ```url``` with the url for your MindBridge instance. Upon execution, you should see details about the user associated with your token."
    ]
   },
   {
@@ -306,7 +225,12 @@
     "            audit_areas=[\"Audit Area 1\"],\n",
     "            assigned_id=user.id,\n",
     "        )\n",
-    "        task = server.tasks.create(task)\n",
+    "        existing_task = next(server.tasks.get(json={\"analysisId\": analysis.id, \"analysisResultId\": task.analysis_result_id, \"transactionId\": task.transaction_id, \"rowId\": task.row_id}), None)\n",
+    "        if existing_task:\n",
+    "            print(f\"   - Task already exists as {existing_task.id}\")\n",
+    "        else:\n",
+    "            task = server.tasks.create(task)\n",
+    "            print(f\"    - Created task: {task.id}\")\n",
     "\n",
     "print(\"Done.\")\n",
     "temp_file_path.unlink()"
